# dreidel

./: .gitignore  AGENTS.md  ARCHITECTURE.md  BUILDING.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  TODO.md  USER_GUIDE.md  build.rs  cliff.toml  deny.toml  dist-workspace.toml  mise.toml  release.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
benches/: tree_build.rs
docs/: 2026-03-25-toppers-design.md  2026-03-25-toppers-plan.md  2026-03-29-clipboard-copy-design.md  2026-04-03-cargo-binstall-plan.md  2026-04-04-process-detail-fields.md  2026-04-12-history-chart-widget.md  IMPLEMENTATION_PLAN.md  bsd-port-analysis.md  competitor-comparison.md  process-tree-performance.md
docs/issues/: high-async-blocking_sleep_tui_stop.md  high-performance-action_clone_fanout.md  high-reliability-draw_errors_silently_dropped.md  high-reliability-key_handler_errors_discarded.md  low-ci-actions_not_sha_pinned.md  low-ci-cargo_test_no_locked.md  low-ci-fmt_job_no_cache.md  low-ci-no_aarch64_check.md  low-ci-no_coverage_reporting.md  low-quality-cpu_per_core_history_pub.md  low-quality-disk_kind_string_not_enum.md  low-quality-tui_size_dead_code.md  med-dry-detail_view_pattern_duplicated.md  med-dry-filter_state_machine_duplicated.md  med-dry-fmt_rate_duplicated.md  med-dry-history_len_triplicated.md  med-dry-name_matches_clamp_border_duplicated.md  med-dry-netview_diskview_identical.md  med-performance-filtered_cores_repeated_alloc.md  med-performance-latest_clone_in_draw.md  med-performance-render_clones_per_frame.md  med-performance-tolowercase_double_alloc.md  med-performance-view_state_clone_for_match.md  med-quality-blanket_allow_unused.md  med-quality-kill_uses_subprocess.md  med-quality-process_status_wildcard.md  med-quality-silent_config_fallback.md  med-quality-tui_pub_fields.md  med-quality-unused_name_clone_kill_confirm.md
docs/screenshots/: cpu_compact.txt  cpu_fullscreen.txt  disk_list.txt  net_list.txt  process_detail.txt  process_list.txt  process_tree.txt  status_bar.txt
docs/specs/: 2026-03-27-procfs-pid-crate-and-process-fullscreen.md
scripts/: jj-push  jj-push-main  release
src/: action.rs  app.rs  cli.rs  config.rs  default-config.toml  errors.rs  layout.rs  lib.rs  main.rs  theme.rs  tui.rs
src/components/: chart.rs  cpu.rs  debug.rs  disk.rs  help.rs  mem.rs  mod.rs  net.rs  status_bar.rs
src/components/process/: filter.rs  mod.rs  sort.rs  tree.rs
src/components/snapshots/: dreidel__components__chart__tests__chart_empty.snap  dreidel__components__chart__tests__chart_single_series_top.snap  dreidel__components__chart__tests__chart_too_narrow.snap  dreidel__components__chart__tests__chart_two_series_anchored.snap  dreidel__components__cpu__tests__cpu_fullscreen.snap  dreidel__components__cpu__tests__cpu_no_data.snap  dreidel__components__cpu__tests__cpu_with_data.snap  dreidel__components__disk__tests__disk_graph_view.snap  dreidel__components__disk__tests__disk_with_data.snap  dreidel__components__help__tests__help_overlay.snap  dreidel__components__mem__tests__mem_no_data.snap  dreidel__components__net__tests__net_graph_view.snap  dreidel__components__net__tests__net_list_with_chart.snap  dreidel__components__net__tests__net_no_data.snap  dreidel__components__net__tests__net_with_data.snap  dreidel__components__status_bar__tests__renders_all_rows_with_swap.snap  dreidel__components__status_bar__tests__renders_hostname_and_uptime.snap  toppers__components__cpu__tests__cpu_no_data.snap  toppers__components__cpu__tests__cpu_with_data.snap  toppers__components__disk__tests__disk_no_data.snap  toppers__components__disk__tests__disk_with_data.snap  (+7 more)
src/stats/: mod.rs  snapshots.rs
tests/: doc_screenshots.rs  snapshots.rs
tests/snapshots/: snapshots__cpu_component_snapshot.snap  snapshots__mem_component_snapshot.snap  snapshots__mem_component_snapshot.snap.new  snapshots__status_bar_snapshot.snap
(+8 files in other folders)
