[package]
name = "toppers"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/raysuliteanu/toppers"

[lib]
name = "toppers"
path = "src/lib.rs"

[[bin]]
name = "toppers"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
chrono = "0.4.44"
clap = { version = "4.6.0", features = ["derive"] }
crossterm = { version = "0.29.0", features = ["event-stream"] }
dirs = "6.0.0"
futures = "0.3.32"
humantime = "2.3.0"
ratatui = "0.30.0"
serde = { version = "1.0.228", features = ["derive"] }
strum = { version = "0.28.0", features = ["derive"] }
sysinfo = "0.38.4"
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["full"] }
tokio-util = "0.7.18"
toml = "1.1.0"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"

[dev-dependencies]
insta = { version = "1.46.3", features = ["filters"] }
