[package]
name = "dreidel"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/raysuliteanu/toppers"
license = "GPL-3.0-only"

[lib]
name = "dreidel"
path = "src/lib.rs"

[[bin]]
name = "dreidel"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
chrono = "0.4.44"
clap = { version = "4.6.0", features = ["derive"] }
crossterm = { version = "0.29.0", features = ["event-stream"] }
dirs = "6.0.0"
futures = "0.3.32"
humantime = "2.3.0"
procfs = { version = "0.18.0", default-features = false }
ratatui = "0.30.0"
serde = { version = "1.0.228", features = ["derive"] }
strum = { version = "0.28.0", features = ["derive"] }
sysinfo = "0.38.4"
termbg = "0.6.2"
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["sync", "time", "rt", "rt-multi-thread", "macros"] }
tokio-util = "0.7.18"
toml = "1.1.0"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"

[dev-dependencies]
insta = { version = "1.46.3", features = ["filters"] }
