[package]
name = "dreidel"
version = "0.5.1"
edition = "2024"
rust-version = "1.88"
description = "A keyboard-driven terminal system monitor for Linux"
keywords = ["tui", "monitor", "system", "ratatui", "linux"]
categories = ["command-line-utilities", "visualization"]
repository = "https://github.com/raysuliteanu/dreidel"
readme = "README.md"
license = "GPL-3.0-only"
exclude = [
    "ARCHITECTURE.md",
    "BUILDING.md",
    "CHANGELOG.md",
    "AGENTS.md",
    "TODO.md",
    "USER_GUIDE.md",
    ".claude/",
    "benches/",
    "cliff.toml",
    "deny.toml",
    "mise.toml",
    "release.toml",
    "docs/",
    "scripts/",
    "tests/",
]

[lib]
name = "dreidel"
path = "src/lib.rs"

[[bin]]
name = "dreidel"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
chrono = "0.4.44"
clap = { version = "4.6.0", features = ["derive"] }
crossterm = { version = "0.29.0", features = ["event-stream"] }
dirs = "6.0.0"
futures = "0.3.32"
humantime = "2.3.0"
nix = { version = "0.31.2", features = ["signal"] }
procfs = { version = "0.18.0", default-features = false }
ratatui = "0.30.0"
serde = { version = "1.0.228", features = ["derive"] }
strum = { version = "0.28.0", features = ["derive"] }
sysinfo = "0.38.4"
termbg = "0.6.2"
tokio = { version = "1.50.0", features = [
    "sync",
    "time",
    "rt",
    "rt-multi-thread",
    "macros",
] }
tokio-util = "0.7.18"
toml = "1.1.0"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"

[features]
test-stubs = [] # Exposes stub() constructors on snapshot types for testing

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }
dreidel = { path = ".", features = ["test-stubs"] }
insta = { version = "1.46.3", features = ["filters"] }

[[bench]]
name = "tree_build"
harness = false

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[package.metadata.docs.rs]
# This crate uses Linux-specific APIs; only build docs for Linux targets.
targets = ["x86_64-unknown-linux-gnu"]
